Enviando todas as funcionalidades completas

--- a/projeto-glass-html5/google-glass.html
+++ b/projeto-glass-html5/google-glass.html
@@ -6,12 +6,12 @@
 	<style>
 	body{
 	font-family: Arial;
-	font-size: 10pt;
+	font-size: 11pt;
 	overflow-x:hidden;
 	}
 	::-webkit-scrollbar{ 
-	display: none;  <!--esconder a barra lateral e fazer a rolagem-->
-	}
+	display: none;  
+	} <!--esconder a barra lateral e fazer a rolagem-->
 	
 	
 	p{
@@ -19,7 +19,8 @@
 	text-indent: 20px;
 	}
 	
-	article h1{ <!-- fonte cor do titulo das especificaçoes-->
+	/*trtrt*/
+	article h1{ 
 	font-size:15pt;
 	color: #FFFFFF; 
 	background-color:rgba(0,0,0,.3);
@@ -27,17 +28,17 @@
 	margin: 0px;
 	}
 	
-	
+	<!--titulo perto da img da mae e sub titulos-->
+
 	article h2{    
 	font-size: 13pt;
-	color: #888888;
-	margin 0px;
-	<!--titulo perto da img da mae e sub titulos-->
+	color: #f7ebeb;
+	margin: 0px;
 	}
 	
 	article{ 
-	margin-bottom: 400px; <!--espaço em branco muito grande-->
-	}
+	margin-bottom: 400px;  
+	} <!--esconder a barra lateral e fazer a rolagem-->
 	img.img-dir{
 	display: block;
 	float: right;
